<resources>
    <string name="app_name">Vintage_CloApp_Coursework</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ayoshi">AYOSHI</string>
    <string name="for_your_clothing_needs">for your clothing needs</string>
    <string name="sign_in">sign-in</string>
    <string name="register">register</string>
    <string name="register_cap">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in_register">Sign-In</string>
    <string name="login">Login</string>
    <string name="basket">Basket</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="s_t_c">S T C</string>
    <string name="azyokazo_gmail_com">azyokazo@gmail.com</string>
    <string name="ayo_kojo">Ayo Kojo</string>
    <string name="search_your_vintage_garm">Search your Vintage Garm!</string>
    <string name="search_for_your_vintage_gram">Search For Your Vintage Gram</string>
    <string name="product_name">Product Name</string>
    <string name="_5_0">5.0</string>
    <string name="_45">$45</string>
    <string name="pay_now">Pay Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="Money_ammount">180</string>
</resources>