<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.vintage_cloapp_coursework.activites.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_basket"
        android:name="com.example.vintage_cloapp_coursework.activites.fragments.Basket"
        android:label="@string/basket"
        tools:layout="@layout/basket_fragment" />

    <fragment
        android:id="@+id/nav_Favorite"
        android:name="com.example.vintage_cloapp_coursework.activites.fragments.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.vintage_cloapp_coursework.activites.fragments.Settings"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>